...
    object Button {
      const val CLEAR_FILTERS = "Clear language button"
      const val SWITCH_VIEW = "Switch View Button"
    }

    object SearchBar {
      const val CLICKABLE_SEARCH_BAR = "Clickable Search Bar"
      const val SEARCH_BAR = "Search Bar focus status %s"
      const val LOADING_INDICATOR = "Search Bar Loading Indicator"
      const val CLOSE_SEARCH = "Search Bar Close Button"
    }

    object TopAppBar {
      const val NAVIGATE_UP = "Top App Bar Navigate Up Button"
      const val TOP_APP_BAR = "Top App Bar"
      const val TOP_APP_BAR_TITLE = "Top App Bar Title"
...
    const val ALL_RATINGS_BOTTOM_SHEET = "All Ratings Bottom Sheet"

    const val RATING_SOURCE_SKELETON = "Rating skeleton for %s"
  }

  object Profile {
    const val CONTENT = "Profile Content"
  }

  object Details {
    const val COLLAPSIBLE_LAYOUT = "Details Collapsible Layout"

    const val RATE_THIS_BUTTON = "Rate This Button"
...
