...

  <string name="delete">Delete</string>
  <string name="cancel">Cancel</string>

  <!-- Accessibility -->
  <string name="movie_image_placeholder">Movie image</string>
  <string name="top_level_navigation_content_description_selected">Selected bottom navigation item %1$s</string>
  <string name="top_level_navigation_content_description_unselected">Unselected bottom navigation item %1$s</string>
</resources>

