package com.divinelink.scenepeek.ui

import androidx.compose.runtime.rememberCoroutineScope
import androidx.compose.ui.test.assertIsDisplayed
import androidx.compose.ui.test.assertIsNotDisplayed
import androidx.compose.ui.test.hasText
import androidx.compose.ui.test.onAllNodesWithText
import androidx.compose.ui.test.onFirst
import androidx.compose.ui.test.onNodeWithContentDescription
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performScrollToNode
import androidx.compose.ui.test.performTextInput
import androidx.compose.ui.test.performTouchInput
import androidx.compose.ui.test.runComposeUiTest
import androidx.compose.ui.test.swipeDown
import app.cash.turbine.test
import com.divinelink.core.domain.components.SwitchViewButtonViewModel
import com.divinelink.core.domain.credits.SpoilersObfuscationUseCase
import com.divinelink.core.domain.search.SearchStateManager
import com.divinelink.core.fixtures.core.commons.ClockFactory
import com.divinelink.core.fixtures.core.data.network.TestNetworkMonitor
import com.divinelink.core.fixtures.data.app.TestAppInfoRepository
import com.divinelink.core.fixtures.data.preferences.TestPreferencesRepository
import com.divinelink.core.fixtures.manager.TestOnboardingManager
import com.divinelink.core.fixtures.model.account.TMDBAccountFactory
import com.divinelink.core.fixtures.model.details.MediaDetailsFactory
import com.divinelink.core.fixtures.model.media.MediaItemFactory
import com.divinelink.core.model.PaginationData
import com.divinelink.core.model.details.media.MediaDetailsResult
import com.divinelink.core.model.details.rating.RatingSource
import com.divinelink.core.model.exception.AppException
import com.divinelink.core.model.media.MediaItem
import com.divinelink.core.model.media.MediaType
import com.divinelink.core.navigation.Navigator
import com.divinelink.core.navigation.route.Navigation
import com.divinelink.core.scaffold.ScenePeekApp
import com.divinelink.core.scaffold.ScenePeekAppState
import com.divinelink.core.scaffold.TopLevelDestination
import com.divinelink.core.scaffold.rememberScenePeekAppState
import com.divinelink.core.scaffold.resources.top_level_navigation_content_description_selected
import com.divinelink.core.scaffold.resources.top_level_navigation_content_description_unselected
import com.divinelink.core.testing.ComposeTest
import com.divinelink.core.testing.MainDispatcherRule
import com.divinelink.core.testing.repository.TestAuthRepository
import com.divinelink.core.testing.repository.TestDetailsRepository
import com.divinelink.core.testing.repository.TestMediaRepository
import com.divinelink.core.testing.repository.TestSearchRepository
import com.divinelink.core.testing.setContentWithTheme
import com.divinelink.core.testing.uiTest
import com.divinelink.core.testing.usecase.FakeAddToWatchlistUseCase
import com.divinelink.core.testing.usecase.FakeDeleteRatingUseCase
import com.divinelink.core.testing.usecase.FakeFetchMultiInfoSearchUseCase
import com.divinelink.core.testing.usecase.FakeGetAccountDetailsUseCase
import com.divinelink.core.testing.usecase.FakeGetJellyseerrDetailsUseCase
import com.divinelink.core.testing.usecase.FakeGetMediaDetailsUseCase
import com.divinelink.core.testing.usecase.FakeRequestMediaUseCase
import com.divinelink.core.testing.usecase.FakeSubmitRatingUseCase
import com.divinelink.core.testing.usecase.TestDeleteMediaUseCase
import com.divinelink.core.testing.usecase.TestDeleteRequestUseCase
import com.divinelink.core.testing.usecase.TestFetchAllRatingsUseCase
import com.divinelink.core.testing.usecase.TestMarkAsFavoriteUseCase
import com.divinelink.core.testing.usecase.TestMarkOnboardingCompleteUseCase
import com.divinelink.core.testing.usecase.TestSpoilersObfuscationUseCase
import com.divinelink.core.ui.MainUiEvent
import com.divinelink.core.ui.MainUiState
import com.divinelink.core.ui.TestTags
import com.divinelink.core.ui.UiString
import com.divinelink.core.ui.components.ToolbarState
import com.divinelink.core.ui.resources.core_ui_connected
import com.divinelink.core.ui.resources.core_ui_not_connected
import com.divinelink.core.ui.resources.core_ui_toolbar_search_placeholder
import com.divinelink.feature.details.media.ui.DetailsViewModel
import com.divinelink.feature.home.HomeViewModel
import com.divinelink.feature.onboarding.manager.IntroSections
import com.divinelink.feature.onboarding.ui.IntroViewModel
import com.divinelink.feature.profile.ProfileViewModel
import com.divinelink.feature.search.ui.SearchViewModel
import com.divinelink.scenepeek.di.navigationModule
import com.google.common.truth.Truth.assertThat
import kotlinx.coroutines.flow.flowOf
import kotlinx.coroutines.test.advanceTimeBy
import kotlinx.coroutines.test.runTest
import org.jetbrains.compose.resources.getString
import org.koin.core.component.get
import org.koin.core.context.startKoin
import org.koin.core.context.stopKoin
import org.koin.test.mock.declare
import kotlin.test.AfterTest
import kotlin.test.BeforeTest
import kotlin.test.Test
import kotlin.time.Clock
import com.divinelink.core.scaffold.resources.Res as scaffoldR

class ScenePeekAppTest : ComposeTest() {

  private lateinit var uiState: MainUiState
  private lateinit var uiEvent: MainUiEvent

  private val networkMonitor = TestNetworkMonitor()
  private val onboardingManager = TestOnboardingManager()
  private val preferencesRepository = TestPreferencesRepository()
  private val mediaRepository = TestMediaRepository()
  private val clock: Clock = ClockFactory.decemberFirst2021()
  private lateinit var navigator: Navigator

  private val homeTab = "Home"
  private val profileTab = "Profile"
  private val searchTab = "Search"

  private lateinit var state: ScenePeekAppState

  // HOME use cases
  private lateinit var fetchMultiInfoSearchUseCase: FakeFetchMultiInfoSearchUseCase
  private lateinit var markAsFavoriteUseCase: TestMarkAsFavoriteUseCase

  private val searchStateManager = SearchStateManager()

  // Profile use cases
  private lateinit var getAccountDetailsUseCaseTest: FakeGetAccountDetailsUseCase

  // DETAILS use cases
  private lateinit var getMediaDetailsUseCase: FakeGetMediaDetailsUseCase
  private lateinit var submitRatingUseCase: FakeSubmitRatingUseCase
  private lateinit var deleteRatingUseCase: FakeDeleteRatingUseCase
  private lateinit var addToWatchlistUseCase: FakeAddToWatchlistUseCase
  private lateinit var requestMediaUseCase: FakeRequestMediaUseCase
  private lateinit var spoilersObfuscationUseCase: SpoilersObfuscationUseCase
  private lateinit var fetchAllRatingsUseCase: TestFetchAllRatingsUseCase
  private lateinit var deleteRequestUseCase: TestDeleteRequestUseCase
  private lateinit var deleteMediaUseCase: TestDeleteMediaUseCase
  private lateinit var authRepository: TestAuthRepository
  private lateinit var detailsRepository: TestDetailsRepository
  private lateinit var appInfoRepository: TestAppInfoRepository
  private lateinit var searchRepository: TestSearchRepository

  // Onboarding use cases
  private val markOnboardingCompleteUseCase = TestMarkOnboardingCompleteUseCase()
  private val getAccountDetailsUseCase = FakeGetAccountDetailsUseCase()
  private val getJellyseerrAccountDetailsUseCase = FakeGetJellyseerrDetailsUseCase()

  @BeforeTest
  override fun setUp() {
    uiState = MainUiState.Completed
    uiEvent = MainUiEvent.None

    fetchMultiInfoSearchUseCase = FakeFetchMultiInfoSearchUseCase()
    markAsFavoriteUseCase = TestMarkAsFavoriteUseCase()

    getAccountDetailsUseCaseTest = FakeGetAccountDetailsUseCase()
    authRepository = TestAuthRepository()

    getMediaDetailsUseCase = FakeGetMediaDetailsUseCase()
    submitRatingUseCase = FakeSubmitRatingUseCase()
    deleteRatingUseCase = FakeDeleteRatingUseCase()
    addToWatchlistUseCase = FakeAddToWatchlistUseCase()
    requestMediaUseCase = FakeRequestMediaUseCase()
    fetchAllRatingsUseCase = TestFetchAllRatingsUseCase()
    spoilersObfuscationUseCase = TestSpoilersObfuscationUseCase().useCase()
    deleteRequestUseCase = TestDeleteRequestUseCase()
    deleteMediaUseCase = TestDeleteMediaUseCase()
    authRepository = TestAuthRepository()
    detailsRepository = TestDetailsRepository()
    appInfoRepository = TestAppInfoRepository()
    searchRepository = TestSearchRepository()

    startKoin {
      modules(
        navigationModule,
      )
    }

    navigator = get<Navigator>()
  }

  @AfterTest
  fun tearDown() {
    stopKoin()
  }

  @Test
  fun `test navigation items are visible`() = uiTest {
    mockHomeData()

    declare {
      HomeViewModel(
        markAsFavoriteUseCase = markAsFavoriteUseCase,
        searchStateManager = searchStateManager,
        repository = mediaRepository.mock,
        clock = clock,
      )
    }

    setContentWithTheme {
      val state = rememberScenePeekAppState(
        networkMonitor = networkMonitor,
        onboardingManager = onboardingManager,
        navigator = navigator,
        preferencesRepository = preferencesRepository,
        appInfoRepository = appInfoRepository,
      )

      ScenePeekApp(
        state = state,
        uiState = uiState,
        uiEvent = uiEvent,
        onConsumeEvent = {},
      )
    }

    onNodeWithText(homeTab).assertExists()
    onNodeWithText(profileTab).assertExists()

    onNodeWithContentDescription(
      getString(scaffoldR.string.top_level_navigation_content_description_selected, homeTab),
      useUnmergedTree = true,
    ).assertExists()

    onNodeWithContentDescription(
      getString(scaffoldR.string.top_level_navigation_content_description_unselected, profileTab),
      useUnmergedTree = true,
    ).assertExists()

    onNodeWithContentDescription(
      getString(scaffoldR.string.top_level_navigation_content_description_unselected, searchTab),
      useUnmergedTree = true,
    ).assertExists()
  }

  @Test
  fun `test navigate to profile`() = uiTest {
    mockHomeData()

    authRepository.mockJellyseerrEnabled(true)

    declare {
      HomeViewModel(
        clock = clock,
        repository = mediaRepository.mock,
        markAsFavoriteUseCase = markAsFavoriteUseCase,
        searchStateManager = searchStateManager,
      )
    }

    declare {
      ProfileViewModel(
        getAccountDetailsUseCase = getAccountDetailsUseCase.mock,
        authRepository = authRepository.mock,
      )
    }

    setContentWithTheme {
      val state = rememberScenePeekAppState(
        networkMonitor = networkMonitor,
        onboardingManager = onboardingManager,
        navigator = navigator,
        preferencesRepository = preferencesRepository,
        appInfoRepository = appInfoRepository,
      )

      ScenePeekApp(
        state = state,
        uiState = uiState,
        uiEvent = uiEvent,
        onConsumeEvent = {},
      )
    }

    onNodeWithText(homeTab).assertExists()
    onNodeWithText(profileTab).assertExists()

    onNodeWithContentDescription(
      getString(scaffoldR.string.top_level_navigation_content_description_selected, homeTab),
      useUnmergedTree = true,
    ).assertExists()

    onNodeWithContentDescription(
      getString(scaffoldR.string.top_level_navigation_content_description_unselected, profileTab),
      useUnmergedTree = true,
    ).assertExists()

    onNodeWithText(profileTab).performClick()

    onNodeWithContentDescription(
      getString(scaffoldR.string.top_level_navigation_content_description_selected, profileTab),
      useUnmergedTree = true,
    ).assertExists()

    onNodeWithContentDescription(
      getString(scaffoldR.string.top_level_navigation_content_description_unselected, homeTab),
      useUnmergedTree = true,
    ).assertExists()
  }

  @Test
  fun `test navigate to search from home search bar open search with focused search`() = uiTest {
    val homeTab = "Home"
    val searchTab = "Search"

    mockHomeData()

    declare {
      SwitchViewButtonViewModel(
        repository = preferencesRepository,
      )
    }

    declare {
      HomeViewModel(
        clock = clock,
        repository = mediaRepository.mock,
        markAsFavoriteUseCase = markAsFavoriteUseCase,
        searchStateManager = searchStateManager,
      )
    }

    declare {
      SearchViewModel(
        fetchMultiInfoSearchUseCase = fetchMultiInfoSearchUseCase.mock,
        searchStateManager = searchStateManager,
        searchRepository = searchRepository.mock,
      )
    }

    setContentWithTheme {
      val state = rememberScenePeekAppState(
        networkMonitor = networkMonitor,
        onboardingManager = onboardingManager,
        navigator = navigator,
        preferencesRepository = preferencesRepository,
        appInfoRepository = appInfoRepository,
      )

      ScenePeekApp(
        state = state,
        uiState = uiState,
        uiEvent = uiEvent,
        onConsumeEvent = {},
      )
    }

    onNodeWithText(homeTab).assertExists()

    onNodeWithContentDescription(
      getString(scaffoldR.string.top_level_navigation_content_description_selected, homeTab),
      useUnmergedTree = true,
    ).assertIsDisplayed()

    onNodeWithContentDescription(
      getString(scaffoldR.string.top_level_navigation_content_description_unselected, searchTab),
      useUnmergedTree = true,
    ).assertIsDisplayed()

    onNodeWithTag(TestTags.Components.SearchBar.CLICKABLE_SEARCH_BAR).performClick()

    onNodeWithContentDescription(
      getString(scaffoldR.string.top_level_navigation_content_description_selected, searchTab),
      useUnmergedTree = true,
    ).assertExists()

    onNodeWithContentDescription(
      getString(scaffoldR.string.top_level_navigation_content_description_unselected, homeTab),
      useUnmergedTree = true,
    ).assertExists()

    onNodeWithTag(
      TestTags.Components.SearchBar.SEARCH_BAR.format(ToolbarState.Focused),
    ).assertIsDisplayed()
  }

  /**
   * Test case where we make sure that when navigation from home to search by pressing
   * the search bar, the search bar gets focused.
   *
   * Then when leaving search tab and re-entering it this time by clicking on the search tab,
   * the search bar should not be focused.
   */
  @Test
  fun `test search bar remains unfocused when navigating between home and search`() = uiTest {
    mockHomeData()

    declare {
      SwitchViewButtonViewModel(
        repository = preferencesRepository,
      )
    }

    declare {
      HomeViewModel(
        clock = clock,
        repository = mediaRepository.mock,
        markAsFavoriteUseCase = markAsFavoriteUseCase,
        searchStateManager = searchStateManager,
      )
    }

    declare {
      SearchViewModel(
        fetchMultiInfoSearchUseCase = fetchMultiInfoSearchUseCase.mock,
        searchStateManager = searchStateManager,
        searchRepository = searchRepository.mock,
      )
    }

    setContentWithTheme {
      val state = rememberScenePeekAppState(
        networkMonitor = networkMonitor,
        onboardingManager = onboardingManager,
        navigator = navigator,
        preferencesRepository = preferencesRepository,
        appInfoRepository = appInfoRepository,
      )

      ScenePeekApp(
        state = state,
        uiState = uiState,
        uiEvent = uiEvent,
        onConsumeEvent = {},
      )
    }

    onNodeWithText(homeTab).assertExists()

    onNodeWithContentDescription(
      getString(scaffoldR.string.top_level_navigation_content_description_selected, homeTab),
      useUnmergedTree = true,
    ).assertIsDisplayed()

    onNodeWithContentDescription(
      getString(scaffoldR.string.top_level_navigation_content_description_unselected, searchTab),
      useUnmergedTree = true,
    ).assertIsDisplayed()

    onNodeWithTag(TestTags.Components.SearchBar.CLICKABLE_SEARCH_BAR).performClick()

    onNodeWithContentDescription(
      getString(scaffoldR.string.top_level_navigation_content_description_selected, searchTab),
      useUnmergedTree = true,
    ).assertExists()

    onNodeWithContentDescription(
      getString(scaffoldR.string.top_level_navigation_content_description_unselected, homeTab),
      useUnmergedTree = true,
    ).assertExists()

    onNodeWithTag(
      TestTags.Components.SearchBar.SEARCH_BAR.format(ToolbarState.Focused),
    ).assertIsDisplayed()

    onNodeWithTag(TestTags.Components.SearchBar.CLOSE_SEARCH).performClick()

    onNodeWithTag(
      TestTags.Components.SearchBar.SEARCH_BAR.format(ToolbarState.Unfocused),
    ).assertIsDisplayed()

    onNodeWithContentDescription(
      getString(scaffoldR.string.top_level_navigation_content_description_unselected, homeTab),
      useUnmergedTree = true,
    ).performClick()

    onNodeWithContentDescription(
      getString(scaffoldR.string.top_level_navigation_content_description_unselected, searchTab),
      useUnmergedTree = true,
    ).performClick()

    onNodeWithTag(
      TestTags.Components.SearchBar.SEARCH_BAR.format(ToolbarState.Unfocused),
    ).assertIsDisplayed()
  }

  @Test
  fun `test navigate to search`() = runComposeUiTest {
    mockHomeData()

    declare {
      SwitchViewButtonViewModel(
        repository = preferencesRepository,
      )
    }

    declare {
      HomeViewModel(
        clock = clock,
        repository = mediaRepository.mock,
        markAsFavoriteUseCase = markAsFavoriteUseCase,
        searchStateManager = searchStateManager,
      )
    }

    declare {
      SearchViewModel(
        fetchMultiInfoSearchUseCase = fetchMultiInfoSearchUseCase.mock,
        searchStateManager = searchStateManager,
        searchRepository = searchRepository.mock,
      )
    }

    setContentWithTheme {
      val state = rememberScenePeekAppState(
        networkMonitor = networkMonitor,
        onboardingManager = onboardingManager,
        navigator = navigator,
        preferencesRepository = preferencesRepository,
        appInfoRepository = appInfoRepository,
      )

      ScenePeekApp(
        state = state,
        uiState = uiState,
        uiEvent = uiEvent,
        onConsumeEvent = {},
      )
    }

    onNodeWithText(homeTab).assertExists()

    onNodeWithContentDescription(
      getString(scaffoldR.string.top_level_navigation_content_description_selected, homeTab),
      useUnmergedTree = true,
    ).assertExists()

    onNodeWithContentDescription(
      getString(scaffoldR.string.top_level_navigation_content_description_unselected, searchTab),
      useUnmergedTree = true,
    )
      .assertExists()
      .performClick()

    onNodeWithContentDescription(
      getString(scaffoldR.string.top_level_navigation_content_description_selected, searchTab),
      useUnmergedTree = true,
    ).assertExists()

    onNodeWithContentDescription(
      getString(scaffoldR.string.top_level_navigation_content_description_unselected, homeTab),
      useUnmergedTree = true,
    ).assertExists()
  }

  @Test
  fun `test re-selecting search tab focuses search bar`() = uiTest {
    mockHomeData()

    declare {
      SwitchViewButtonViewModel(
        repository = preferencesRepository,
      )
    }

    declare {
      HomeViewModel(
        clock = clock,
        repository = mediaRepository.mock,
        markAsFavoriteUseCase = markAsFavoriteUseCase,
        searchStateManager = searchStateManager,
      )
    }

    declare {
      SearchViewModel(
        fetchMultiInfoSearchUseCase = fetchMultiInfoSearchUseCase.mock,
        searchStateManager = searchStateManager,
        searchRepository = searchRepository.mock,
      )
    }

    setContentWithTheme {
      val state = rememberScenePeekAppState(
        networkMonitor = networkMonitor,
        onboardingManager = onboardingManager,
        navigator = navigator,
        preferencesRepository = preferencesRepository,
        appInfoRepository = appInfoRepository,
      )

      ScenePeekApp(
        state = state,
        uiState = uiState,
        uiEvent = uiEvent,
        onConsumeEvent = {},
      )
    }

    onNodeWithText(homeTab).assertExists()

    onNodeWithContentDescription(
      getString(scaffoldR.string.top_level_navigation_content_description_selected, homeTab),
      useUnmergedTree = true,
    ).assertExists()

    onNodeWithContentDescription(
      getString(scaffoldR.string.top_level_navigation_content_description_unselected, searchTab),
      useUnmergedTree = true,
    )
      .assertExists()
      .performClick()

    onNodeWithContentDescription(
      getString(scaffoldR.string.top_level_navigation_content_description_selected, searchTab),
      useUnmergedTree = true,
    ).assertExists()

    onNodeWithContentDescription(
      getString(scaffoldR.string.top_level_navigation_content_description_unselected, homeTab),
      useUnmergedTree = true,
    ).assertExists()

    onNodeWithTag(
      TestTags.Components.SearchBar.SEARCH_BAR.format(ToolbarState.Unfocused),
    ).assertIsDisplayed()

    onNodeWithTag(
      TestTags.Components.SearchBar.SEARCH_BAR.format(ToolbarState.Focused),
    ).assertIsNotDisplayed()

    onNodeWithContentDescription(
      getString(scaffoldR.string.top_level_navigation_content_description_selected, searchTab),
      useUnmergedTree = true,
    ).performClick()

    onNodeWithTag(
      TestTags.Components.SearchBar.SEARCH_BAR.format(ToolbarState.Focused),
    ).assertIsDisplayed()

    onNodeWithContentDescription(
      getString(UiString.core_ui_toolbar_search_placeholder),
    )
      .performTextInput("test query")

    onNodeWithText("test query").assertIsDisplayed()
  }

  @Test
  fun `test navigate to profile when is on movie details`() = uiTest {
    mockHomeData()

    authRepository.mockJellyseerrEnabled(false)

    getAccountDetailsUseCase.mockSuccess(flowOf(Result.success(TMDBAccountFactory.loggedIn())))

    getMediaDetailsUseCase.mockFetchMediaDetails(
      response = flowOf(
        Result.success(
          MediaDetailsResult.DetailsSuccess(
            mediaDetails = MediaDetailsFactory.FightClub(),
            ratingSource = RatingSource.TMDB,
          ),
        ),
      ),
    )

    declare {
      HomeViewModel(
        clock = clock,
        repository = mediaRepository.mock,
        markAsFavoriteUseCase = markAsFavoriteUseCase,
        searchStateManager = searchStateManager,
      )
    }

    declare {
      ProfileViewModel(
        getAccountDetailsUseCase = getAccountDetailsUseCase.mock,
        authRepository = authRepository.mock,
      )
    }

    declare {
      DetailsViewModel(
        getMediaDetailsUseCase = getMediaDetailsUseCase.mock,
        onMarkAsFavoriteUseCase = markAsFavoriteUseCase,
        submitRatingUseCase = submitRatingUseCase.mock,
        deleteRatingUseCase = deleteRatingUseCase.mock,
        addToAccountUseCase = addToWatchlistUseCase.mock,
        spoilersObfuscationUseCase = spoilersObfuscationUseCase,
        fetchAllRatingsUseCase = fetchAllRatingsUseCase.mock,
        deleteRequestUseCase = deleteRequestUseCase.mock,
        deleteMediaUseCase = deleteMediaUseCase.mock,
        authRepository = authRepository.mock,
        repository = detailsRepository.mock,
        preferencesRepository = preferencesRepository,
        route = Navigation.DetailsRoute(
          id = 1,
          isFavorite = false,
          mediaType = MediaType.MOVIE.value,
        ),
      )
    }

    setContentWithTheme {
      val state = rememberScenePeekAppState(
        networkMonitor = networkMonitor,
        onboardingManager = onboardingManager,
        navigator = navigator,
        preferencesRepository = preferencesRepository,
        appInfoRepository = appInfoRepository,
      )

      ScenePeekApp(
        state = state,
        uiState = uiState,
        uiEvent = uiEvent,
        onConsumeEvent = {},
      )
    }

    onNodeWithText(homeTab).assertIsDisplayed()
    onNodeWithText(profileTab).assertIsDisplayed()

    onNodeWithText(profileTab).performClick()

    onNodeWithTag(TestTags.Profile.CONTENT).assertIsDisplayed()

